--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h3>Hello,</h3>
                 <h1>Sheila Awuor here</h1>
                 <h3>I'm a <span class="typing">Full Stack Web Developer</span></h3>
-                <p>A full stack web developer with a deep curiosity for systems and how things connect. I love creating from imagination, turning ideas into clean, functional, and engaging digital experiences.</p>
+                <p>Deeply curious about systems and how things connect. I love creating from imagination, turning ideas into clean, functional, and engaging digital experiences.</p>
                 <div class="social-links">
                     <a href="https://github.com/sheilawuor" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="https://linkedin.com/in/sheila-awuor-31983a3a8" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -51,7 +51,15 @@
                 </div>
                 <div class="about-text">
                     <h3>Full Stack Developer</h3>
-                    <p>I'm a passionate full stack developer with experience in building web applications. I love creating efficient, scalable, and user-friendly solutions. Driven by creativity, logic, and the joy of building things that work beautifully.</p>
+                    <p>Detail oriented Full Stack Software Engineer trained at Moringa School, with a strong foundation in the
+design, development, testing, and maintenance of web based applications. 
+Proficient in HTML, CSS, JavaScript,and React for front end development, and Python with Flask for back end development. 
+Hands on experience implementing RESTful APIs, integrating relational databases, and using version control systems including Git and
+GitHub. 
+Demonstrated ability to deliver reliable, scalable, and well documented solutions through structured, project
+based training. 
+Possesses strong analytical, problem solving, and communication skills, with a professional approach to teamwork, deadlines, quality standards, and continuous improvement within corporate and regulated
+technology environments.</p>
                     <a href="#contact" class="btn">Let's Talk</a>
                 </div>
             </div>
@@ -112,15 +120,15 @@
                 </div>
                 <div class="project-card">
                     <div class="project-img"></div>
-                    <h3>Meal Planner</h3>
-                    <p>A web application for planning and organizing meals with recipe management.</p>
-                    <a href="https://github.com/sheilawuor/Meal-Planner" target="_blank" class="project-link">View Project <i class="fas fa-external-link-alt"></i></a>
-                </div>
-                <div class="project-card">
-                    <div class="project-img"></div>
                     <h3>CLI Movie Project</h3>
                     <p>A command-line interface application for managing and browsing movies.</p>
                     <a href="https://github.com/sheilawuor/CLI-movie-project" target="_blank" class="project-link">View Project <i class="fas fa-external-link-alt"></i></a>
+                </div>
+                <div class="project-card">
+                    <div class="project-img"></div>
+                    <h3>Meal Planner</h3>
+                    <p>A web application for planning and organizing meals with recipe management.</p>
+                    <a href="https://github.com/sheilawuor/Meal-Planner" target="_blank" class="project-link">View Project <i class="fas fa-external-link-alt"></i></a>
                 </div>
                 <div class="project-card">
                     <div class="project-img"></div>
@@ -146,7 +154,7 @@
                     <i class="fas fa-envelope"></i>
                     <div>
                         <h4>Email</h4>
-                        <a href="mailto:Sheilawuor@gmail.com">Sheilawuor@gmail.com</a>
+                        <a href="mailto:Sheilawuor01@gmail.com">Sheilawuor@gmail.com</a>
                     </div>
                 </div>
                 <div class="contact-item">
