--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ technology environments.</p>
                     <i class="fas fa-envelope"></i>
                     <div>
                         <h4>Email</h4>
-                        <a href="mailto:Sheilawuor01@gmail.com">Sheilawuor@gmail.com</a>
+                        <a href="mailto:Sheilawuor01@gmail.com">Sheilawuor01@gmail.com</a>
                     </div>
                 </div>
                 <div class="contact-item">
