--- a/index.html
+++ b/index.html
@@ -51,15 +51,11 @@
                 </div>
                 <div class="about-text">
                     <h3>Full Stack Developer</h3>
-                    <p>Detail oriented Full Stack Software Engineer trained at Moringa School, with a strong foundation in the
-design, development, testing, and maintenance of web based applications. 
-Proficient in HTML, CSS, JavaScript,and React for front end development, and Python with Flask for back end development. 
-Hands on experience implementing RESTful APIs, integrating relational databases, and using version control systems including Git and
-GitHub. 
-Demonstrated ability to deliver reliable, scalable, and well documented solutions through structured, project
-based training. 
-Possesses strong analytical, problem solving, and communication skills, with a professional approach to teamwork, deadlines, quality standards, and continuous improvement within corporate and regulated
-technology environments.</p>
+                    <p>Detail oriented Full Stack Software Engineer trained at Moringa School, with a strong foundation in the design, development, testing, and maintenance of web based applications.<br><br>
+Proficient in HTML, CSS, JavaScript,and React for front end development, and Python with Flask for back end development.<br><br>
+Hands on experience implementing RESTful APIs, integrating relational databases, and using version control systems including Git and GitHub.<br><br>
+Demonstrated ability to deliver reliable, scalable, and well documented solutions through structured, project based training.<br><br>
+Possesses strong analytical, problem solving, and communication skills, with a professional approach to teamwork, deadlines, quality standards, and continuous improvement within corporate and regulated technology environments.</p>
                     <a href="#contact" class="btn">Let's Talk</a>
                 </div>
             </div>
